fix: align most-popular

--- a/css/components/card.css
+++ b/css/components/card.css
@@ -15,7 +15,6 @@
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
-	justify-content: space-between;
 }
 
 .card .card-row {
