--- a/css/components/housing.css
+++ b/css/components/housing.css
@@ -1,46 +1,24 @@
 #housing {
 	display: flex;
 	justify-content: space-between;
-	flex-wrap: wrap-reverse;
+	/* flex-wrap: wrap-reverse; */
 	gap: 1em;
 
-	margin-top: 20px;
+	margin-top: 2rem;
 }
 
-/* Phone screen */
-@media (max-width: 767px) {
-	.most-popular {
-		color: purple;
-		justify-self: flex-end;
-		margin-bottom: 20px;
-		width: 100%;
-	}
-
-	.housing-list {
-		width: 100%;
-	}
+.most-popular {
+	color: red;
+	justify-self: flex-end;
 }
 
-/* Tablet */
-@media (min-width: 768px) and (max-width: 991px) {
-	.most-popular {
-		color: green;
-		justify-self: flex-end;
-		margin-top: 20px;
-	}
+.most-popular .card-content {
+	height: 100%;
+	justify-content: space-between;
 }
 
-/* Computer screen */
-@media (min-width: 992px) {
-	.most-popular {
-		color: red;
-		justify-self: flex-end;
-		margin-bottom: 2em;
-	}
-
-	.housing-list {
-		flex-grow: 1;
-	}
+.housing-list {
+	flex-grow: 1;
 }
 
 .most-popular-title {
