--- a/css/global.css
+++ b/css/global.css
@@ -8,6 +8,7 @@ body {
 
 .main {
 	margin-top: 2.5rem;
+	margin-bottom: 2.5rem;
 	padding: 0px 30px;
 }
 
